--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body{
   font-family:'Poppins',sans-serif;
   text-align:center;
   overflow:hidden;
+  transition:background 0.5s ease;
 }
 
 #container{
@@ -86,29 +87,16 @@ button{
   100%{transform:scale(1);}
 }
 
-.floating-heart{
-  position:fixed;
-  bottom:-20px;
-  font-size:26px;
-  animation:floatUp linear forwards;
-  pointer-events:none;
-}
-
-@keyframes floatUp{
-  to{transform:translateY(-120vh);opacity:0;}
-}
-
-.confetti-piece{
+.rose{
   position:fixed;
   top:-20px;
-  width:8px;
-  height:14px;
-  animation:fall linear forwards;
+  font-size:24px;
+  animation:fall 4s linear forwards;
   pointer-events:none;
 }
 
 @keyframes fall{
-  to{transform:translateY(120vh) rotate(360deg);}
+  to{transform:translateY(120vh);}
 }
 </style>
 </head>
@@ -173,57 +161,37 @@ function setupButtons(){
     noBtn.style.top=Math.random()*60+"%";
   });
 
-  yesBtn.addEventListener("click",function(){
-    loadFinalPage();
-  });
+  yesBtn.addEventListener("click",loadFinalPage);
 }
 
 function loadFinalPage(){
   currentPage="final";
-  document.body.style.overflowY="auto";
-  document.body.style.alignItems="flex-start";
-  window.scrollTo(0,0);
+  document.body.style.background="linear-gradient(160deg,#ffb6d9,#ffd6eb)";
+  document.body.style.overflow="hidden";
 
   document.getElementById("container").innerHTML=`
     <div class="card">
       <div class="love-text">Love you💕</div>
       <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
       <img id="finalPhoto" src="finalphoto.jpg.jpg">
-      <p style="margin-top:20px;color:white;font-weight:600;">
-        Scroll down ↓
-      </p>
+      <p style="color:white;font-weight:600;">Scroll down ↓</p>
     </div>
-    <div style="height:400px;"></div>
   `;
-
-  startHearts();
-  startConfetti();
-
-  window.addEventListener("scroll", handleScroll);
-}
-
-function handleScroll(){
-  if(currentPage==="final" && window.scrollY > 150){
-    loadBouquetPage();
-  }
-  else if(currentPage==="bouquet" && window.scrollY < 50){
-    loadFinalPage();
-  }
 }
 
 function loadBouquetPage(){
   currentPage="bouquet";
   document.body.style.background="black";
-  document.body.style.overflowY="auto";
-  document.body.style.alignItems="flex-start";
-  window.scrollTo(0,0);
+  document.body.style.overflow="hidden";
 
   document.getElementById("container").innerHTML=`
     <div class="card" style="background:transparent; box-shadow:none;">
-      <h1 style="color:#ff2e88;">Here's your flowers 🌹</h1>
+      <h1 style="color:#ff2e88;">
+        Heres ur flowers (sorry there not real)❤️
+      </h1>
 
       <div style="position:relative; display:inline-block;">
-        <img src="bouquet.jpg" style="width:100%; border-radius:25px;">
+        <img id="roseImg" src="bouquet.jpg" style="width:100%; border-radius:25px; cursor:pointer;">
 
         <div onclick="openLoveLetter()" 
              style="
@@ -244,10 +212,21 @@ function loadBouquetPage(){
           ← Click the note 💌
         </div>
       </div>
-
-      <div style="height:400px;"></div>
     </div>
   `;
+
+  document.getElementById("roseImg").addEventListener("click",dropRoses);
+}
+
+function dropRoses(){
+  for(let i=0;i<20;i++){
+    const rose=document.createElement("div");
+    rose.className="rose";
+    rose.innerHTML="🌹";
+    rose.style.left=Math.random()*100+"vw";
+    document.body.appendChild(rose);
+    setTimeout(()=>rose.remove(),4000);
+  }
 }
 
 function openLoveLetter(){
@@ -293,33 +272,16 @@ function openLoveLetter(){
   document.body.appendChild(overlay);
 }
 
-function startHearts(){
-  setInterval(()=>{
-    const heart=document.createElement("div");
-    heart.className="floating-heart";
-    heart.innerHTML="💖";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.animationDuration=(4+Math.random()*2)+"s";
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),6000);
-  },400);
-}
-
-function startConfetti(){
-  const colors=["#ff2e88","#ffffff","#ffb6d9","#ff66b3"];
-  setInterval(()=>{
-    const piece=document.createElement("div");
-    piece.className="confetti-piece";
-    piece.style.left=Math.random()*100+"vw";
-    piece.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
-    piece.style.animationDuration=(3+Math.random()*2)+"s";
-    document.body.appendChild(piece);
-    setTimeout(()=>piece.remove(),5000);
-  },150);
-}
+window.addEventListener("wheel", function(e){
+  if(currentPage==="final" && e.deltaY > 0){
+    loadBouquetPage();
+  }
+  else if(currentPage==="bouquet" && e.deltaY < 0){
+    loadFinalPage();
+  }
+});
 
 </script>
 
 </body>
 </html>
-
